Fixed icons which were not showing, added restaurant name on index page, fixed description in about us and modified restaurants new form

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -177,5 +177,14 @@ input[type=radio]:checked + label.reserve {
   color:rgb(66, 132, 189);
 }
 
+a.restaurant-index{
+  font-size:20px;
+
+}
+
+.restaurant-index-test{
+text-align:center;
+}
+
 
 
